added hero section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <title>Assignment-01</title>
 </head>
 <body>
-  <header>
+  <header class="header">
     <nav>
       <h3 class="inter-normal primary-color">LOGO</h3>
       <button class="primary-btn raleway-normal">Sign Up</button>
     </nav>
+    <div class="banner">
+      <h2 class="hero-title raleway-normal">Cool Dark UI Templates for Webflow Agencies!</h2>
+      <button class="primary-btn">Stay Focused</button>
+    </div>
   </header>
 </body>
 </html>
