--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
       <button class="primary-btn">Stay Focused</button>
     </div>
   </header>
+  <main>
+    <section class="action">
+      <div class="action-text">
+        <h3 class="action-title raleway-normal">See It in Action</h3>
+        <p class="action-subtitle raleway-normal">Explore the live preview and imagine your brand in this bold new look.</p>
+        <button class="live-btn">Launch Live Preview</button>
+      </div>
+      <div class="action-image">
+        <img src="Assets/wc-mini.png" alt="">
+      </div>
+    </section>
+  </main>
 </body>
 </html>
