added productive user section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
         <img src="Assets/wc-mini.png" alt="">
       </div>
     </section>
+    <section class="productive-user">
+      <div class="bg">
+        <div>
+          <h3 class="action-title raleway-normal">Joined Thousands of Productive Users</h3>
+          <div class="details">
+            <div class="details1">
+            <h1 class="inter-normal">50K</h1>
+          <p class="inter-normal">Active Users</p>
+          </div>
+          <div class="details1">
+            <h1 class="inter-normal">2M+</h1>
+          <p class="inter-normal">Focus Sessions</p>
+          </div>
+          <div class="details1">
+            <h1 class="inter-normal">95%</h1>
+          <p class="inter-normal">Satisfaction Rate</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
