added get in touch section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
         </div>
       </div>
     </section>
+    <section class="get-in-touch">
+      <div class="text">
+        <h2 class="hero-title raleway-normal">Let's Get in Touch</h2>
+      </div>
+      <div class="form" >
+        <form action="">
+          <label for="email" class="inter-normal m">Email</label>
+          <input type="email" name="" id="email" placeholder="example@email.com" class="inter-normal">
+
+          <label for="name" class="inter-normal m">Name</label>
+          <input type="text" id="name" placeholder="full name" class="inter-normal">
+
+          <label for="message" class="inter-normal m" >Message</label>
+          <textarea name="" id="message" placeholder="write your message...." class="inter-normal" rows="5"></textarea>
+          <button class="primary-btn touch-btn m">Gate in touch</button>
+        </form>
+      </div>
+    </section>
   </main>
 </body>
 </html>
