--- a/index.html
+++ b/index.html
@@ -67,10 +67,22 @@
 
           <label for="message" class="inter-normal m" >Message</label>
           <textarea name="" id="message" placeholder="write your message...." class="inter-normal" rows="5"></textarea>
-          <button class="primary-btn touch-btn m">Gate in touch</button>
+          <button class="primary-btn touch-btn m">Get in touch</button>
         </form>
       </div>
     </section>
   </main>
+  <footer>
+    <div class="footer">
+      <h1 class="inter-normal">LOGO</h1>
+    <p class="inter-normal m1">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+    <ul class="ul m1 inter-normal">
+      <li>Home</li>
+      <li>About</li>
+      <li>How it Works</li>
+      <li>Services</li>
+    </ul>
+    </div>
+  </footer>
 </body>
 </html>
